--- a/index.html
+++ b/index.html
@@ -19,204 +19,241 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="page-header">
-      <a href="./index.html"
-        ><span class="logo-web">Web</span
-        ><span class="logo-studio">Studio</span></a
-      >
-      <nav class="header-nav">
-        <ul class="nav-list">
-          <li class="nav-item">
-            <a class="nav-link" href="./index.html">Studio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../portfolio.html">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../contacts.html">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="contacts">
-        <ul class="contacts-list">
-          <li class="contacts-item">
-            <a class="contact-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contacts-item">
-            <a class="contact-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container header-container">
+        <div class="logo">
+          <a href="./index.html"
+            ><span class="logo-web">Web</span
+            ><span class="logo-studio">Studio</span></a
+          >
+        </div>
+        <nav class="header-nav">
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html">Studio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../contacts.html">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul class="contacts-list">
+            <li class="contacts-item">
+              <a class="contacts-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-item">
+              <a class="contacts-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
-      <section class="hero-image">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-button" type="button">Order Service</button>
+      <section class="hero-image section">
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-button" type="button">Order Service</button>
+        </div>
       </section>
+
       <!-- Our Features section -->
-      <section class="features">
-        <h2 class="features-title section-title">Our Features</h2>
-        <ul>
-          <li class="features-item">
-            <h3 class="section-item">Strategy</h3>
-            <p class="features-text section-txt">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="section-item">Punctuality</h3>
-            <p class="features-text section-txt">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="section-item">Diligence</h3>
-            <p class="features-text">
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="section-item">Technologies</h3>
-            <p class="features-text section-txt">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="features section">
+        <div class="container">
+          <h2 class="hidden section-title">Our Features</h2>
+          <ul class="features-list">
+            <li class="features-item">
+              <h3 class="section-item">Strategy</h3>
+              <p class="features-text section-txt">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="section-item">Punctuality</h3>
+              <p class="features-text section-txt">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="section-item">Diligence</h3>
+              <p class="features-text section-txt">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="section-item">Technologies</h3>
+              <p class="features-text section-txt">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
+
       <!-- Our Team section. -->
-      <section class="team">
-        <h2 class="team-title section-title">Our Team</h2>
-        <ul class="team-list">
-          <li>
-            <img
-              src="./images/MarkGuerrero.jpg"
-              alt="Mark Guerrero Product Designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-member section-item">Mark Guerrero</h3>
-            <p class="team-position section-txt">Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./images/TomFord.jpg"
-              alt="Tom Ford Frontend Developer"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-member section-item">Tom Ford</h3>
-            <p class="team-position section-txt">Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/CamilaGarcia.jpg"
-              alt="Camila Garcia Marketing"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-member section-item">Camila Garcia</h3>
-            <p class="team-position section-txt">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/DanielWilson.jpg"
-              alt="Daniel Wilson UI Designer"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-member section-item">Daniel Wilson</h3>
-            <p class="team-position section-txt">UI Designer</p>
-          </li>
-        </ul>
+      <section class="team section">
+        <div class="container">
+          <h2 class="team-title section-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-card">
+              <img
+                src="./images/MarkGuerrero.jpg"
+                alt="Mark Guerrero Product Designer"
+                width="264"
+                height="260"
+              />
+              <div class="team-wrapper">
+                <h3 class="team-member section-item">Mark Guerrero</h3>
+                <p class="team-position section-txt">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-card">
+              <img
+                src="./images/TomFord.jpg"
+                alt="Tom Ford Frontend Developer"
+                width="264"
+                height="260"
+              />
+              <div class="team-wrapper">
+                <h3 class="team-member section-item">Tom Ford</h3>
+                <p class="team-position section-txt">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-card">
+              <img
+                src="./images/CamilaGarcia.jpg"
+                alt="Camila Garcia Marketing"
+                width="264"
+                height="260"
+              />
+              <div class="team-wrapper">
+                <h3 class="team-member section-item">Camila Garcia</h3>
+                <p class="team-position section-txt">Marketing</p>
+              </div>
+            </li>
+            <li class="team-card">
+              <img
+                src="./images/DanielWilson.jpg"
+                alt="Daniel Wilson UI Designer"
+                width="264"
+                height="260"
+              />
+              <div class="team-wrapper">
+                <h3 class="team-member section-item">Daniel Wilson</h3>
+                <p class="team-position section-txt">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Our Portfolio section -->
-      <section class="portfolio">
-        <h2 class="portfolio-title section-title">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-item">
-            <img
-              src="./images/img-1-1.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-item">Banking App</h3>
-            <p class="portfolio-item-txt section-txt">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/img-1-2.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-item">Cashless Payment</h3>
-            <p class="portfolio-item-txt section-txt">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/img-1-3.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-item">Meditation App</h3>
-            <p class="portfolio-item-txt section-txt">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/img-2-1.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-item">Taxi Service</h3>
-            <p class="portfolio-item-txt section-txt">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/img-2-2.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-item">Screen Illustrations</h3>
-            <p class="portfolio-item-txt section-txt">Design</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/img-2-3.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="section-item">Online Courses</h3>
-            <p class="portfolio-item-txt section-txt">Marketing</p>
-          </li>
-        </ul>
+      <section class="portfolio section">
+        <div class="container">
+          <h2 class="portfolio-title section-title">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
+              <img
+                src="./images/img-1-1.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-wrapper">
+                <h3 class="section-item">Banking App</h3>
+                <p class="portfolio-item-txt section-txt">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/img-1-2.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-wrapper">
+                <h3 class="section-item">Cashless Payment</h3>
+                <p class="portfolio-item-txt section-txt">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/img-1-3.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-wrapper">
+                <h3 class="section-item">Meditation App</h3>
+                <p class="portfolio-item-txt section-txt">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/img-2-1.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-wrapper">
+                <h3 class="section-item">Taxi Service</h3>
+                <p class="portfolio-item-txt section-txt">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/img-2-2.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-wrapper">
+                <h3 class="section-item">Screen Illustrations</h3>
+                <p class="portfolio-item-txt section-txt">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                src="./images/img-2-3.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-wrapper">
+                <h3 class="section-item">Online Courses</h3>
+                <p class="portfolio-item-txt section-txt">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer>
-      <a href="./index.html"
-        ><span class="logo-web">Web</span
-        ><span class="logo-studio">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <div class="logo">
+          <a href="./index.html"
+            ><span class="logo-web">Web</span
+            ><span class="logo-studio">Studio</span>
+          </a>
+        </div>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
