--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <!-- Our Features section -->
       <section class="features section">
         <div class="container">
-          <h2 class="hidden section-title">Our Features</h2>
+          <h2 class="visually-hidden section-title">Our Features</h2>
           <ul class="features-list">
             <li class="features-item">
               <h3 class="section-item">Strategy</h3>
